--- a/frontend/styles/common/initial-styles.css
+++ b/frontend/styles/common/initial-styles.css
@@ -27,8 +27,19 @@ a {
     color: #fff;
 }
 
-::selection {
+.heading {
+    margin: 80px 0 40px 0;
+    width: 100%;
+}
 
+.heading_font {
+    text-align: center;
+    font-family: 'Russo One', sans-serif;
+    font-size: 2rem;
+}
+
+::selection {
+    background-color: var(--accent-color);
 }
 
 @media (max-width: 992px) {
