--- a/frontend/styles/landing/header.css
+++ b/frontend/styles/landing/header.css
@@ -3,6 +3,8 @@
     top: 80px;
     z-index: 10;
 
+    margin-bottom: 80px;
+
     background: url('../../images/landing/header/bg.png') no-repeat center / cover;
 }
 
@@ -30,10 +32,7 @@
     font-size: 2.2rem;
 }
 
-.header__button {
-}
-
-.header__button_style {
+.header_button-style {
     padding: 16px 32px;
 
     font-family: 'Russo One', sans-serif;
@@ -42,9 +41,26 @@
     transition: var(--transition);
 }
 
-.header__button_style:hover {
+.header_button-style:hover {
     padding: 20px 40px;
 
     color: var(--accent-color);
     background-color: #fff;
+}
+
+@media (max-width: 768px) {
+    .header_heading,
+    .header_font {
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 576px) {
+    .header_heading {
+        font-size: 2rem;
+    }
+
+    .header_font {
+        font-size: 1.8rem;
+    }
 }
