--- a/frontend/styles/common/nav.css
+++ b/frontend/styles/common/nav.css
@@ -51,7 +51,13 @@
 
 .nav__li_font_active {
     padding-bottom: 2px;
+
     border-bottom: 2px solid #fff;
+    transition: var(--transition);
+}
+
+.nav__li_font_active:hover {
+    border-bottom: 2px solid var(--accent-color);
 }
 
 @media (max-width: 992px) {
@@ -154,10 +160,6 @@
     .nav__li:not(:last-child) {
         margin-bottom: 40px;
     }
-}
-
-.account {
-    margin-top: 80px;
 }
 
 @media (max-width: 576px) {
