--- a/frontend/styles/account/users/account.css
+++ b/frontend/styles/account/users/account.css
@@ -6,12 +6,18 @@
 }
 
 .applications {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-
-    padding-top: 160px;
+    height: 420px;
     width: 100%;
+    margin-top: 160px;
+
+    overflow-y: scroll;
+}
+
+.applications__container {
+    width: 100%;
+    min-height: 420px;
+
+    overflow-y: scroll;
 }
 
 .applications_heading {
