--- a/frontend/styles/account/users/account.css
+++ b/frontend/styles/account/users/account.css
@@ -1,8 +1,21 @@
 .account {
     display: flex;
     justify-content: center;
+    flex-direction: column;
 
     margin-top: 80px;
+}
+
+.account__report {
+    align-self: flex-end;
+
+    margin-top: 40px;
+}
+
+.account__report_font {
+    text-decoration: underline;
+    color: rgba(0, 0, 0, 0.69);
+    background-color: initial;
 }
 
 .applications {
@@ -11,6 +24,10 @@
     margin-top: 160px;
 
     overflow-y: scroll;
+}
+
+.applications[data-admin] {
+    margin-top: 120px;
 }
 
 .applications__container {
